2015-05-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (main), doc/gsad.8: Remove --redirect option.

2015-05-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (get_task): Get the Alerts and Target of the Task.

	* src/html/classic/omp.xsl (task [details]): Set parameter "related"
	of resource-permissions-window template call.
	(html-create-permission-form): Add list of links to related resources.

	* src/html/classic/omp.xsl (new_permission.html): Add related resources
	for Tasks and sentence about the list of related resources.

2015-05-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/gsad.xsl (login_page): Correct typo in enctype, to
	prevent form text from being escaped.  This was preventing login with
	passwords that contain a space, for example.

2015-05-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (main): Add --no-redirect option. Make --redirect the
	default behaviour.

2015-04-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/help.xsl (new_permission.html): Add section about
	the "Create Multiple Permissions" dialog.

2015-04-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (create_permissions_omp): Add start_task, stop_task
	and resume_task as part of the "proxy" permissions for Tasks.

	* src/html/classic/omp.xsl (task-permissions-window): Remove.
	(task [details]): Use template resource-permissions-window instead of
	task-permissions-window.
	(html-create-permission-form): Add "Task" in type selection of
	multi-permissions form.

2015-04-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add permission window for details pages of other types in the
	Configuration menu. Add permission related indicator icons.

	* src/gsad_omp.c (get_config): Add the permissions for the config.
	(create_permissions_omp): Handle permissions test_alert,
	validate_agent, validate_report_format and validate_scanner as part